# academic-skills

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: plugin.json
docs/: design-v1.md  installation-guide.md
mcp-servers/chrome-setup/: pyproject.toml
mcp-servers/chrome-setup/src/agent_chrome_setup/: __init__.py  platform.py  port.py  profile.py  server.py  shortcut.py
skills/paper-download/: SKILL.md
skills/paper-download/references/: cnki-workflow.md  gray-sources.md  setup-guide.md  sources.md  tier-decision.md
