[project]
name = "agent-chrome-setup"
version = "0.1.0"
description = "MCP server for managing Chrome lifecycle for AI agents"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
agent-chrome-setup = "agent_chrome_setup.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
